# odelib

./: .gitignore  CMakeLists.txt  README.md
apps/: adams4order_demo.c  methods_comparison.c  quinney_corrector_iteration.c  quinney_ex282.c  quinney_examples.c  test.c
include/: arrays.h  arrays_assistant.h  derivative_signature.h  multistep.h  ode_multistep.h  ode_singlestep.h  odesys.h  singlestep.h  vector.h
src/: multistep.c  ode_multistep.c  ode_singlestep.c  singlestep.c  vector.c
